--- a/faber.html
+++ b/faber.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>faber fernandez</title>
+    <title>faber fernandez dorado</title>
   </head>
   <body>
 
